fix some layout issues with columns

--- a/app/assets/stylesheets/short_urls.scss
+++ b/app/assets/stylesheets/short_urls.scss
@@ -65,9 +65,12 @@ ul.short_url--edit.short_url.menu {
 }
 
 .create_url {
-  background-color: #7EA943;
   font-weight: 600;
   font-size: 1.8rem !important;
+}
+
+.button--cta {
+  background-color: #7EA943;
 }
 
 .short-url-stats {
